--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -1,49 +1,47 @@
 # The workflow {#workflow}
 
-The recommended workflow for building successful Shiny Apps happens in five parts: Design, Prototype, Build, Secure and Deploy.  
+Building a robust, production-ready web application will be made easier by following a given workflow. 
+The one we are advocating for is divided in five steps: Design, Prototype, Build, Strenghten and Deploy. 
+In this section, we will give an overview of the different steps of this workflow: the rest of the book will cover in more depth each of these steps. 
 
 ## Part 1: Design 
 
-The _Design_ part is the time when you think about how you will conceive the application, before actually writing any line of code. 
-It is not Shiny nor R specific: it is something software engineers do for any software or web application: discuss with the clients, the end-users, and the developers who will work on the project. 
-In this first part of the workflow, you will discover some tools that will help you define how the application will be build.
-This means somewhere between users' dreams, what is technically possible, and the time you have to build the application.  
+The first part of the workflow is the __design__ part. 
+This first step of the process is the one that happens, before actually writing any line of code. 
+
+This first step is not Shiny nor R specific, but something software engineers do for any software or web application: discuss with the clients, the end-users, and the developers who will work on the project. 
+
+During the process of designing, you will define how the application will be build: somewhere between users' dreams, what is technically possible, and the time you have to build the application.  
 
 ## Part 2: Prototype 
 
 The _Prototype_ part is the one during which you will build the front-end and the back-end, but separately.
-As you may know, a Shiny application is an interface used to communicate information to the end-users. 
-The general appearance, position of the inputs and outputs as well as graphical interactions need to be chosen with care. 
-On the other hand, the back-end should be built carefully: the end users will potentially make decisions based on what they learn from your app. 
-That is why you should take extra care building the UI, but also building the back-end. 
 
-Here, we advise to build the two sides of the app separately: the core back-end can be outputted to HTML documents that can be sent and validated by the clients, and the front-end can be tested without actual implementation of the back-end.
-This workflow relies on two separate processes:  
+As you may know, a Shiny application is an interface (the front-end) used to communicate information to the end-users that are computed on the server side (the back-end). 
 
-+ A 'UI-first' approach, with tools to build the skeleton of the application before engineering its core.  
+To start on solid ground, you need to build the two (front and back) seperately: 
 
-+ A 'Rmd-first' approach, which focuses on the actual computation of the outputs, out of the UI and its reactivity.
-<!-- COMMENT: This will be presented extensively in the dedicated part, let us keep it small here. With some mystery... -->
-<!-- The idea here is to prototype the targeted outputs outside of the application reactivity. -->
-<!-- This 'Rmd first' method is designed to help you focus on the core of the application outside of any reactive context, and also to develop functions and write the documentation with visual outputs and example data. -->
++ On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions.... everything that does not rely on computation on the back end. 
+This "UI first" approach will be made possible for Shiny with notably one package, `{shinipsum}`, and tools like basic CSS, and some `{golem}` functions.
 
++ On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work. 
+For this point, you can use what we call a "Rmd-first" approach, by combining R functions with the writing of Vignettes that describes the internal of the application. 
 
 ## Part 3: Build 
 
 The _Build_ part is the one where you will combine the business (or back-end) logic with the front-end. 
-In this part 3, you will work on the core engine of the application. 
-If you plan on building a robust Shiny application, you will have to start using the correct development tools.
-You will see how to upgrade your development workflow using [{golem}](https://thinkr-open.github.io/golem/), a package which created to help you design a robust and maintainable Shiny application.
+In this third part, you will work on the core engine of the application, making the business logic work inside the interactive logic of your application. 
 
 ## Part 4: Strengthen 
 
-_Strengthening_ your app is ensuring your application will last forever.
-This might seem like a hard task, but some good practices will help you all along life-cycle of the app.
+_Strengthening_ your app is ensuring your application is immortal, in the sense that we defined in the first chapter of this book.
+
 In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of Shiny applications.
 
 ## Part 5: Deploy 
 
-To _Deploy_ is to send your application to production.
-Being exhaustive here is an impossible task as there are numerous ways to make your application accessible to its targeted users.
-But we will try to provide some!
-In this part, we will quickly present a series of methods to deploy your application on various environments, and show how you can use `{golem}` to make this task easier. 
+To _Deploy_ is to send your application into production once it is built.
+
+Being exhaustive here would be an impossible task: there are countless ways to make your application accessible to its targeted users, but we will try to cover some basics about this part. 
+
+In this part, we will quickly present a series of methods to deploy your application on various environments, notably sharing your application as a package, sending it to an RStudio platform, or building a Docker image to serve your app on a cloud provider. 
