--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -12,39 +12,38 @@ http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#rule_of_optimization
 
 And yet another Rule from the Art of Unix Programming: "Rule of Optimization: Prototype before polishing. __Get it working before you optimize it__."
 
-Getting things work before trying to optimize the app is always a good approach: 
+Getting things to work before trying to optimize the app is always a good approach: 
 
 + Making things work before working on low level optimization makes the whole engineering process easier: having a "minimal viable product" that works, even if slowly and not perfectly, gives a stronger sense of success to the project. 
-If you are building an vehicule, it feels more of a success to start with a skateboard than with a wheel.
+For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful.
 
 ![](img/mvp.png)
 
 + Abstraction is hard, and makes the code base harder to work with. 
-You've heard a lot that if you are copying and pasting something more than twice, you should write a function. 
+You have heard a lot that if you are copying and pasting something more than twice, you should write a function. 
 And with Shiny, if you are writing a piece of the app more than twice, you should write modules. 
 But while these kind of abstractions are elegant and optimized, they can make the software harder to work on while building it. 
 So before focusing on turning something into a function, make it work first. 
-As said in [R for Data Science]() about abstraction with `{purrr}`: 
+As said in [R for Data Science](https://r4ds.had.co.nz/) about abstraction with `{purrr}`: 
 
 > Once you master these functions, you’ll find it takes much less time to solve iteration problems. But you should never feel bad about using a for loop instead of a map function. The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work. The important thing is that you solve the problem that you’re working on, not write the most concise and elegant code (although that’s definitely something you want to strive towards!).
 
 `r right_link("R for Data Science - 21.5 The map functions", "https://r4ds.had.co.nz/iteration.html")`
 
-As a small example, we can refer to the binding module from `{hexmake}`: this module manipulates namespace, inputs and session to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)). 
+As a small example, we can refer to the binding module from `{hexmake}`: this module manipulates namespaces, inputs and `session` to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)). 
 That's an elegant solution: instead of duplicating content, we use functions to automatically bind events.
-But that's a highter level of abstraction: we manipulate different levels of namespacing and inputs, making it harder to reason about when you have to change the code base a lot. 
+But that is a higher level of abstraction: we manipulate different levels of namespacing and inputs, making it harder to reason about when you have to change the code base. 
 
 + It's hard to identify upfront the real bottlenecks of the app. 
-As long as the app is not in a working state, it's very hard to identify the real pieces of code that need to be optimized. 
-Chances are that if you ask yourself upfront what the app bottlenecks will be, you won't aim right. 
+As long as the app is not in a working state, it is very hard to identify the real pieces of code that need to be optimized. 
+Chances are that if you ask yourself upfront what the app bottlenecks will be, you will not aim right. 
 So instead of losing time focusing on specific pieces of code you think need to be optimized, start by having something that works, then optimize the code. 
+In other words, "_Make It Work. Make It Right. Make It Fast_", ([KentBeck](https://wiki.c2.com/?MakeItWorkMakeItRightMakeItFast)).
 
 + It's easier to spot mistakes when you have something the can run. 
-If a piece of software runs, it's straightforward to check if a change in the codebase break the software or not: it either still run or not. 
+If a piece of software runs, it is straightforward to check if a change in the codebase break the software or not: it either still run or not. 
 
 ### The "UI first" approach
-
-Now that we are set for prototyping first, where should we start? 
 
 Using what can be called a "UI first" approach when building an app is in most cases the safest way to fo. 
 And for two main reasons.
@@ -52,41 +51,67 @@ And for two main reasons.
 #### Agreeing on specification
 
 First of all, it helps everybody involved in the application to agree on what the app is supposed to do, and once the UI is set, there should be no "surprise implementation". 
-Well, at least, this is the best way to reduce the number of changes in the app, as the sooner we have a global idea of the app the better: it is often hard to implement a core new feature once the app is 90% finished when thinking of it from the very start.
+Well, at least, this is the best way to reduce the number of changes in the app, as the sooner we have a global idea of the app the better: it is hard to implement a core new feature once the app is 90% finished, while it would have been way easier to implement it if it has been detected from the very start.
 Indeed, implementing core feature once the app is very advanced can be critical, as our application might not have been thought to work the way it now needs to work, so adding certain elements might lead to a need for change in the core architecture of the app.
 
-Once we agree on what elements there are in the app, there is no sudden “oh the app needs to do that thing now, sorry I hadn't realized that before”.
-And we can't blame the person ordering the app for not realizing everything needed: it's really hard to have a mental model of the whole app when we are reading specifications. 
-On the other hand, having a mock application with the UI really helps realising what the app is doing and how it works, and to agree with the developer that this is actually what we want our application to do. 
+Once we agree on what elements compose the app, there should be no sudden "oh the app needs to do that thing now, sorry I hadn't realized that before".
+And we can not blame the person ordering the app for not realizing everything needed: it is really hard to have a mental model of the whole app when we are writing specifications, not to mention when reading them. 
+On the other hand, having a mock application with the UI really helps realizing what the app is doing and how it works, and to agree with the developer that this is actually what we want our application to do (or realizing that this is not something we actually need).
 
-Prototyping the UI first should require the least possible calculations from the server part of your application. 
+Prototyping the UI first should require the least possible computation from the server-side of your application. 
 You focus on the appearance of the app: buttons, figures, tables, graphs... and how they interact with each other. 
-At that stage of the design process, you will not be focusing on correctness of the results or graph: you will be placing elements on the front-end so that you can be sure that everything is there, even if some buttons do not trigger anything. 
-At that point, the idea is to get the people ordering the app think about what they actually need, and there might be some question rising like "oh, where is the button to do that download that results in pdf?". 
-And now is the best moment for a change in specification. 
+At that stage of the design process, you will not be focusing on correctness of the results or graphs: you will be placing elements on the front-end so that you can be sure that everything is there, even if some buttons do not trigger anything. 
+At that point, the idea is to get the people ordering the app think about what they actually need, and there might be some question rising like "oh, where is the button to download that results in pdf?". 
+And at that precise moment is the perfect time for a change in specification. 
 
 #### Organising work
 
-A pre-defined UI allows every person involved in the coding to know which part of the app they are working on, and to be sure that you do not forget anything. 
+A pre-defined UI allows every person involved in the coding process to know which part of the app they are working on, and to be sure that you do not forget anything. 
 As you might be working on the app as a team, you will need to find a strategy for efficiently splitting the work between every coder. 
 And it’s much easier to work on a piece of the app you can visually identify and integrate in a complete app scenario. 
-In other words, it's easier to be told "you will be working on the 'Summary' panel" than "you will be working on bullet poing 45 to 78 of the specifications". 
+In other words, it is easier to be told "you will be working on the 'Summary' panel from that mock UI" than "you will be working on bullet point 45 to 78 of the specifications". 
 
 ## Prototyping Shiny
 
-### Fast prototyping with `{shinipsum}`
+In the next section, you will be introduced to two packages that can be used when prototyping user interface: `{shinipsum}` and `{fakir}`.
 
-The goal of {shinipsum} is to provide random shiny elements to simulate interface outputs.
-Use `lorem`, the long "Lorem Ipsum" text to fill in text parts.
-Use the `random_*` functions in the `server` part of your application in combination with the appropriate `render*()`.
-This will fill the corresponding call to `*Output()` in the `UI`.  
-For instance:  
+### Fast UI Prototyping with `{shinipsum}`
 
-- `random_DT()` renders a `DT::datatable()` output with one of existing R internal datasets.  
-- `random_ggplot(type = "point")` renders a random {ggplot2} graph with the selected `type` (corresponding to `geom()` in {ggplot2}).  
-- `random_text(nwords = 10)` renders a text with the defined number of words.  
+When prototyping the UI for an application, we will not be focusing on building the actual computation: what we need is creating a draft with visual components, so that we can have visual clues about the end result. 
+To do that, you can use the `{shinipsum}` package, which has been designed to generate random shiny elements.
+If you are familiar with "lorem ipsum", the fake text generator that is used in software design as a placeholder for text, the idea is the same: generating placeholders for Shiny outputs. 
 
-```r
+You can install this package from GitHub with:
+
+```{r eval=FALSE}
+remotes::install_github("Thinkr-open/shinipsum")
+```
+
+In this package, a series of functions that generates random placeholders. 
+For example, `random_ggplot()` generates random `{ggplot2}` elements. 
+If we run this code two time, we should get different results^[
+Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
+]:
+
+```{r}
+library(shinipsum)
+library(ggplot2)
+```
+
+```{r}
+random_ggplot() + 
+  labs(title = "Random plot") 
+```
+
+```{r}
+random_ggplot() + 
+  labs(title = "Random plot") 
+```
+
+Of course, the idea is to combine this with a Shiny interface, for example `random_ggplot()` will be used with a `renderPlot()` and `plotOutput()`.
+And as we want to prototype but still be close to what the app might look like, these functions take arguments that can shape the output: for example, `random_ggplot()` has a `type` parameter that can help you select a specific geom. 
+
+```{r 09-step-by-step-prototype-1}
 library(shiny)
 library(shinipsum)
 library(DT)
@@ -112,20 +137,91 @@ server <- function(input, output, session) {
 }
 shinyApp(ui, server)
 ```
-```{r prototyping-fakir-shinipsum-1, echo=FALSE, out.width="90%"}
-knitr::include_graphics("img/shinipsum.png")
+
+Other `{shinipsum}` functions include: 
+
++ tables: 
+
+```{r}
+random_table(nrow = 3, ncol = 10)
 ```
 
-Find out more in the corresponding website: https://thinkr-open.github.io/shinipsum/
++ print outputs:
+
+```{r}
+random_print(type = "model")
+```
+
+... and text, image, ggplotly, dygraph, and DT.
 
 ### Using `{fakir}` for fake data generation
 
-`{fakir}` was primarily created to provide fake datasets for R tutorials and exercises. 
-"Fake support ticket dataset" is built using `fake_ticket_client()` and "Fake questionnaire on mean of transport / goal dataset" is built using `fake_sondage_answers()`.
-They contain dates, numeric and character variables, with missing values allowing multiple exercises on data cleaning and graph building. 
-They can also be joined with the included {sf} geographical dataset `fra_sf` allowing for maps creation.  
-Fake datasets created with {fakir} can be used to build light examples on the use of the inputs, for filters or interactive maps for instance. 
-When building your application inside a R package, as recommended in this book using {golem}, you may want to build small reproducible examples of your functions, to be presented in the vignettes and tested in the unit tests, prior to building the Shiny Apps itself. 
-You can create these examples using {fakir}.  
+Generating random placeholder for Shiny might not be enough: maybe you also need example datasets.
 
-Find out more in the corresponding website: https://thinkr-open.github.io/fakir/
+This can be accomplished using the `{fakir}` package, which was primarily created to provide fake datasets for R tutorials and exercises, but that can easily be used inside a Shiny application. 
+
+At the time of writing these lines, the package is only available on GitHub, and can be installed with:
+
+```{r eval=FALSE}
+remotes::install_github("Thinkr-open/fakir")
+```
+
+This package contains three "datasets", that are randomly generated when you call the corresponding functions:
+
++ `fake_base_clients()` generates a fake dataset for a ticketing service
+
++ `fake_sondage_answers()` is a fake survey about transportation
+
++ `fake_visits()` is a fake dataset for the visits on a website
+
+```{r}
+library(fakir)
+fake_visits(from = "2017-01-01", to = "2017-01-31")
+```
+
+The idea with these datasets is to combine various formats that can reflect "real life" datasets: they contain dates, numeric and character variables, and have missing values. 
+They can also be manipulated with the included `{sf}` geographical dataset `fra_sf` allowing for maps creation.  
+
+Fake datasets created with `{fakir}` can be used to build light examples on the use of the inputs, for filters or interactive map, or as examples for the internal functions and their corresponding documentation. 
+
+## Building with RMarkdown {#proto-rmdfirst}
+
+While on one side you are building the user interface, you (or someone from your team) can start working on the back-end implementation.
+Again, this should be done out of any reactive logic: the back-end should not depend on any reactive context. 
+And because documentation is gold, you should start with writing the back-end documentation straight as package documentation, inside your Vignettes. 
+Or what we call "Rmd-first".
+
+### Define the content of the application
+
+Rmarkdown files are the perfect spot to sandbox the back-end of your application: inside the file, you are not disrupted by any reactive behavior, as you are just working with plain old R code: data wrangling operations, multi-parameters based models, summary tables outputs, graphical outputs...
+
+And the nice thing is that you can share the output of the rendered file as an HTML or PDF to either your client or boss, or anyone ordering the application. 
+That way, you can drive the discussion to be focused on discussing the core algorithm, not some details like "I want the button to be blue" when what you need to know is if the output of the model is correct-in other words, you are again applying the rule of the separation of concerns, i.e. you help focusing on one part of the application without adding any cognitive load to the person "reading" the outputs. 
+
+And also, last but not least, if you have to implement changes to the back-end functions, it is way easier to check and to share in a static file than in an application.
+
+When doing that, the best way is again to separate things: do not be afraid of writing multiple RMarkdown files, one for each part of the end application. 
+Again, this will help everybody focus on what matter: be it you, your team, or the person ordering the application. 
+
+Building the back-end in Rmd files is also a good way to make the back-end "application independent", in the sense that it helps documenting how the algorithms you have been building can be used outside of the application. 
+In many cases, when you are building an application, you are creating functions that contain business logic/domain expertise, and that can in fact be used outside of the application. 
+Writing these functions and how they work together forces you to think about these functions, and also gives a good starting point for anybody familiar with R that would want to start using this back-end toolkit.
+Of course, as you are building your application as a package, it is way easier now: you can share a package with the application inside it, along with a function to launch the app but also functions that can be used outside.
+
+And if you need some data to use as an example, feel free to pick one from `{fakir}`! (See §\@ref(stepprotopype)).
+
+### Using the Rmd files as a laboratory notebook 
+
+Rmd can also be used as the place to keep track of what you have in mind while creating the application: most of the time, you will create the functions inside the `R/` folder, but it might not be the perfect place to document your thought process. 
+On the other hand, using Markdown as a kind of "software laboratory notebook" to keep track of your idea is a good way to document all the choices you have made about your data wrangling, models, visualization, so that you can use it as a common knowledge-base all along the application life: you can share this with your client, with the rest of your team, or with anybody involved in the project.
+
+And also, developing in multiple Rmd files helps the separation of work between multiple developers, and will reduce code conflicts during development.
+
+### Rmd, Vignettes, and documentation first
+
+Working with the `{golem}` framework implies that you will build the application as an R package. 
+And of course, an R package implies writing documentation: one of the main goals of the Vignettes, in an R package, is to document how to use the package. 
+And the good news is that when checking a package, _i.e_ when running `devtools::check()` or `R CMD check`, the Vignettes are going to be built, and the process will fail if at least one of the Vignette fails to render. 
+That way, you can use the documentation of the back-end as an extra tool for doing unit-testing!
+
+One radical approach to the "Rmd first" philosophy is to write __everything__ in an Rmd from the very beginning of your project: write the function code, there roxygen tags, their tests, etc, then move everything to the correct spot in the package infrastructure once you are happy with everything. And of course, when you need to add another feature to your app, open a new markdown and start the process of development and documentation again. 
